--- a/Bilioteca/Views/Account/Login.cshtml
+++ b/Bilioteca/Views/Account/Login.cshtml
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="~/lib/sweetalert2/css/sweetalert2.min.css" />
+    <link href="~/lib/sweetalert2/Toast/toast.css" rel="stylesheet" />
     <link href="~/modules/Account/css/login.css" rel="stylesheet" />
 
 
@@ -41,6 +43,8 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/sweetalert2/js/sweetalert2.all.min.js"></script>
+    <script src="~/lib/sweetalert2/Toast/toast.js"></script>
     <script src="~/modules/Account/js/login.js"></script>
 
 </body>
