--- a/Bilioteca/Views/Shared/_Layout.cshtml
+++ b/Bilioteca/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/lib/sweetalert2/css/sweetalert2.min.css" />
+    <link href="~/lib/sweetalert2/Toast/toast.css" rel="stylesheet" />
     <link href="~/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bilioteca.styles.css" asp-append-version="true" />
@@ -144,6 +145,7 @@
     <script src="~/lib/chartjs/chart.umd.js"></script>
     <script src="~/lib/datatables/js/dataTables.min.js"></script>
     <script src="~/lib/sweetalert2/js/sweetalert2.all.min.js"></script>
+    <script src="~/lib/sweetalert2/Toast/toast.js"></script>
     <script src="~/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
